--- a/web/webAssets/css/site.css
+++ b/web/webAssets/css/site.css
@@ -5,3 +5,19 @@ body{
 .navbar-inverse{
 	border-radius:0px;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+     text-decoration: none;
+}
+
+a:active {
+      text-decoration: none;
+}
