--- a/web/webAssets/css/ver-modulos.css
+++ b/web/webAssets/css/ver-modulos.css
@@ -1,1 +1,11 @@
-@CHARSET "UTF-8";
+.ver-modulos .panel-body{
+	min-height: 150px;
+}
+
+.ver-modulos .panel-footer {
+    padding: 10px 15px;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
