--- a/web/css/register-v3.css
+++ b/web/css/register-v3.css
@@ -35,9 +35,9 @@
 .page-register-v3 form {
   margin: 45px 0 30px;
 }
-.page-register-v3 form a {
+/*.page-register-v3 form a {
   margin-left: 20px;
-}
+}*/
 .page-register-v3 form .form-material.floating + .page-register-v3 form .form-material.floating {
   margin-top: 30px;
 }
@@ -59,6 +59,7 @@
 }
 
 
+
 a:link {
     text-decoration:underline;
 }
@@ -74,6 +75,23 @@ a:hover {
 a:active {
       text-decoration:underline;
 }
+
+a.btn:link {
+    text-decoration:none;
+}
+
+a.btn:visited {
+    text-decoration:none;
+}
+
+a.btn:hover {
+    text-decoration:none;
+}
+
+a.btn:active {
+      text-decoration:none;
+}
+
 
 .page-content {
     padding: 20px 20px !important;
