--- a/web/webAssets/css/resultados.css
+++ b/web/webAssets/css/resultados.css
@@ -4,3 +4,32 @@
     border-radius: 5px;
     color: #000000;
 }
+
+.sweet-alert button.cancel {
+    background-color: #DD6B55;
+}
+
+.sweet-alert button {
+    background-color: #8CD4F5;
+    color: white;
+    border: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-weight: 500;
+    -webkit-border-radius: 4px;
+    border-radius: 5px;
+    padding: 10px 32px;
+    margin: 26px 5px 0 5px;
+    cursor: pointer;
+}
+
+.panel.success, .panel.danger{
+	background:#54d967;
+	color: white;
+	text-align:center;
+	padding: 35px;
+}
+ .panel.danger{
+ 	
+background:#DD6B55
+}
